<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/name_n_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="18sp"
        android:padding="2dp"
        android:gravity="center_vertical"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/hidratos_de_carbono"
            android:fontFamily="sans-serif-condensed"
            android:textSize="18sp"
            android:padding="2dp"/>

        <TextView
            android:id="@+id/ch_value"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:padding="2dp"
            android:textSize="18sp"
            android:gravity="start"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/energia"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/energy_value"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="16sp"
                    android:gravity="start"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/calorias"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/caloric_value"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="16sp"
                    android:gravity="start"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/prote_nas"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/protein_value"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="16sp"
                    android:gravity="start"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/l_pidos"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/lipids_value"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="16sp"
                    android:gravity="start"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/colesterol"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/cholesterol_value"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="16sp"
                    android:gravity="start"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/sal"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/salt_value"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="16sp"
                    android:gravity="start"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>